<resources>
    <string name="app_name">Vending Machine</string>
    <string name="Title">Vending Machine</string>
    <string name="Play">Play</string>
    <string name="I25">Insert $0.25</string>
    <string name="I50">Insert $0.50</string>
    <string name="I1">Insert $1.00</string>
    <string name="moneySign">$</string>
    <string name="bluedoritos">BlueDoritos</string>
    <string name="reddoritos">RedDoritos</string>
    <string name="lays">Lays</string>
    <string name="skittles">Skittles</string>
    <string name="reeses">Reeses</string>
    <string name="snickers">Snickers</string>
    <string name="pretzels">Pretzels</string>
    <string name="penutcookie">PenutCookie</string>
    <string name="chocolatecookie">ChocolateCookie</string>
    <string name="zero">0</string>
    <string name="buy">buy</string>
    <string name="change">Take Change</string>


</resources>